# xtransfer

./: .gitignore  Cargo.toml  README.md  use_yamux.md
.cargo/: config.toml
.tasks/: 2025-12-23_1_xtransport-protocol.md
channel/: receiver.rs  sender.rs
client/: Cargo.toml
client/src/: main.rs  trans_client.rs  yamux_client.rs
server/: Cargo.toml
server/src/: main.rs  trans_server.rs  yamux_server.rs
xtransport/: Cargo.toml
xtransport/examples/: basic_usage.rs  custom_transport.rs  echo.rs  fragmentation.rs  shared_memory.rs
xtransport/src/: config.rs  error.rs  io.rs  lib.rs  protocol.rs  transport.rs
xtransport/src/buffer/: mod.rs  ring.rs  window.rs
xtransport/src/channel/: mod.rs  receiver.rs  sender.rs
xtransport/src/core/: checksum.rs  frame.rs  mod.rs  packet.rs
xtransport/src/reliable/: mod.rs  reassembler.rs  retransmit.rs
xtransport/src/transport/: mod.rs
