[workspace]
resolver = "2"
members = ["client", "server"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

authors = [
    "Debin <luodeb@outlook.com>",
    "Huangshijia <shijia727@outlook.com>",
]
homepage = "https://github.com/kylin-x-kernel"
repository = "https://github.com/kylin-x-kernel/xtransfer"


[workspace.dependencies]
yamux = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
env_logger = "0.11"
log = "0.4"