[workspace]
resolver = "2"
members = ["client", "server", "xtransport"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

authors = [
    "Debin <luodeb@outlook.com>",
    "Huangshijia <shijia727@outlook.com>",
]
homepage = "https://github.com/kylin-x-kernel"
repository = "https://github.com/kylin-x-kernel/xtransfer"


[workspace.dependencies]
env_logger = "0.11"
log = "0.4"
vsock = "0.5"
yamux = { git = "https://github.com/libp2p/rust-yamux.git" }
tokio = { version = "1.32", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-vsock = "0.7.2" 
futures = "0.3"
