[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# xtransport = { path = "../xtransport", features = ["std"] }
env_logger.workspace = true
log.workspace = true
# vsock.workspace = true # Moving to tokio-vsock
yamux.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-vsock.workspace = true
futures.workspace = true
